--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -2,17 +2,17 @@
    color: var(--primary-brand);
  }
  
- .logo {
-   font-family: 'Raleway', sans-serif;
-   font-weight: 800;
-   font-size: 18px;
-   line-height: 1.33;
-   letter-spacing: 0.03em;
+//  .logo {
+//    font-family: 'Raleway', sans-serif;
+//    font-weight: 800;
+//    font-size: 18px;
+//    line-height: 1.33;
+//    letter-spacing: 0.03em;
  
-   color: var(--secondary-color);
+//    color: var(--secondary-color);
  
-   margin-right: 76px;
- }
+//    margin-right: 76px;
+//  }
 
 
 
