--- a/sass/main.scss
+++ b/sass/main.scss
@@ -23,4 +23,5 @@
 @import "./components/modal";
 @import "./components/modalform";
 @import "./components/portfolliocards";
+@import "./components/mobile-menu";
 
