--- a/css/main.css
+++ b/css/main.css
@@ -59,13 +59,23 @@ img {
 }
 
 .container {
-  width: 1158px;
-  margin-right: auto;
-  margin-left: auto;
+  max-width: 428px;
   padding-left: 15px;
   padding-right: 15px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
+@media screen and (min-width: 768px) {
+  .container {
+    max-width: 768px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .container {
+    max-width: 1158px;
+  }
+}
 .section-title {
   font-size: 36px;
   line-height: 1.1;
@@ -283,10 +293,32 @@ img {
           box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
+@media screen and (max-width: 767px) {
+  .menu {
+    display: none;
+  }
+  .main-address {
+    display: none;
+  }
+  .mobile-menu-open {
+    background-color: transparent;
+    border: none;
+    padding: 0;
+    line-height: 0;
+  }
+  .logo {
+    font-family: "Raleway", sans-serif;
+    font-weight: 800;
+    font-size: 18px;
+    line-height: 1.33;
+    letter-spacing: 0.03em;
+    color: var(--secondary-color);
+    margin-right: 76px;
+  }
+}
 .page-header {
   padding-top: 24px;
   padding-bottom: 24px;
-  border-bottom: 1px solid #E7E9FC;
 }
 
 .page-header-container {
@@ -301,114 +333,139 @@ img {
           justify-content: space-between;
 }
 
-.page-nav {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-.menu {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-.main-address {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-.address-menu {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-.menu-item {
-  position: relative;
-}
-
-.menu-item:not(:last-child) {
-  margin-right: 40px;
-}
-
-.menu-link {
-  font-weight: 500;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
-  color: var(--secondary-color);
-  -webkit-transition: color var(--250ms-animation);
-  transition: color var(--250ms-animation);
-}
-
-.menu-link:hover,
+@media screen and (min-width: 768px) {
+  .mobile-menu-open {
+    display: none;
+  }
+  .page-nav {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    text-align: center;
+  }
+  .logo {
+    font-family: "Raleway", sans-serif;
+    font-weight: 800;
+    font-size: 18px;
+    line-height: 1.33;
+    letter-spacing: 0.03em;
+    color: var(--secondary-color);
+    margin-right: 120px;
+  }
+  .menu {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    text-align: center;
+  }
+  .menu-item {
+    position: relative;
+  }
+  .menu-item:not(:last-child) {
+    margin-right: 40px;
+  }
+  .menu-link {
+    font-weight: 500;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: var(--secondary-color);
+    -webkit-transition: color var(--250ms-animation);
+    transition: color var(--250ms-animation);
+  }
+  .menu-link:hover,
 .menu-link:focus {
-  color: var(--accent-color);
-}
-
-.current::after {
-  position: absolute;
-  left: 0;
-  top: 45px;
-  content: "";
-  display: block;
-  width: 100%;
-  height: 4px;
-  border-radius: 2px;
-  background-color: var(--accent-color);
-  -webkit-transition: opacity var(--250ms-animation);
-  transition: opacity var(--250ms-animation);
-  opacity: 1;
-}
-
-.current {
-  color: var(--accent-color);
-}
-
-.contact-link {
-  font-style: normal;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
-  color: var(--primary-color);
-  -webkit-transition: color var(--250ms-animation);
-  transition: color var(--250ms-animation);
-}
-
-.contact-link:hover,
+    color: var(--accent-color);
+  }
+  .address-menu {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    text-align: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    gap: 4px;
+  }
+  .contact-link {
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 1.33;
+    letter-spacing: 0.04em;
+    color: var(--primary-color);
+    -webkit-transition: color var(--250ms-animation);
+    transition: color var(--250ms-animation);
+  }
+  .contact-link:hover,
 .contact-link:focus {
-  color: var(--accent-color);
+    color: var(--accent-color);
+  }
+  .current::after {
+    position: absolute;
+    left: 0;
+    top: 45px;
+    content: "";
+    display: block;
+    width: 100%;
+    height: 4px;
+    border-radius: 2px;
+    background-color: var(--accent-color);
+    -webkit-transition: opacity var(--250ms-animation);
+    transition: opacity var(--250ms-animation);
+    opacity: 1;
+  }
+  .current {
+    color: var(--accent-color);
+  }
 }
-
-.mail {
-  margin-left: auto;
-  margin-right: 40px;
+@media screen and (min-width: 1200px) {
+  .page-header {
+    padding-top: 24px;
+    padding-bottom: 24px;
+    border-bottom: 1px solid #E7E9FC;
+  }
+  .contact-link {
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: var(--primary-color);
+    -webkit-transition: color var(--250ms-animation);
+    transition: color var(--250ms-animation);
+  }
+  .contact-link:hover,
+.contact-link:focus {
+    color: var(--accent-color);
+  }
+  .main-address {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .address-menu {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+  }
+  .mail {
+    margin-left: auto;
+    margin-right: 40px;
+  }
 }
-
 .logo-spn {
   color: var(--primary-brand);
-}
-
-.logo {
-  font-family: "Raleway", sans-serif;
-  font-weight: 800;
-  font-size: 18px;
-  line-height: 1.33;
-  letter-spacing: 0.03em;
-  color: var(--secondary-color);
-  margin-right: 76px;
 }
 
 .logo-footer {
@@ -423,36 +480,64 @@ img {
   color: var(--primary-brand);
 }
 
-.hero {
-  background-color: var(--secondary-color);
-  padding-top: 188px;
-  padding-bottom: 188px;
+@media screen and (max-width: 767px) {
+  .hero {
+    background-color: var(--secondary-color);
+    padding-top: 112px;
+    padding-bottom: 112px;
+  }
+  .hero-background {
+    width: 100%;
+    height: 432px;
+    margin-right: auto;
+    margin-left: auto;
+    background-image: -webkit-gradient(linear, left top, right top, from(rgba(46, 47, 66, 0.7)), to(rgba(46, 47, 66, 0.7))), url("../images/people-office-hero-mob.jpg");
+    background-image: linear-gradient(to right, rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url("../images/people-office-hero-mob.jpg");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+  }
+  .hero-title {
+    max-width: 320px;
+    margin-right: auto;
+    margin-left: auto;
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.1;
+    text-align: center;
+    letter-spacing: 0.02em;
+    color: var(--basic-white-color);
+  }
+  .modal-btn {
+    margin-top: 72px;
+  }
 }
-
-.hero-background {
-  max-width: 1440px;
-  height: 600px;
-  margin-right: auto;
-  margin-left: auto;
-  background-image: -webkit-gradient(linear, left top, right top, from(rgba(46, 47, 66, 0.7)), to(rgba(46, 47, 66, 0.7))), url("../images/people-office-hero.jpg");
-  background-image: linear-gradient(to right, rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url("../images/people-office-hero.jpg");
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
+@media screen and (min-width: 768px) {
+  .hero {
+    background-color: var(--secondary-color);
+    padding-top: 112px;
+    padding-bottom: 112px;
+  }
+  .hero-background {
+    height: 436px;
+    background-image: -webkit-gradient(linear, left top, right top, from(rgba(46, 47, 66, 0.7)), to(rgba(46, 47, 66, 0.7))), url("../images/people-office-hero-tab.jpg");
+    background-image: linear-gradient(to right, rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url("../images/people-office-hero-tab.jpg");
+  }
+  .hero-title {
+    max-width: 500px;
+    margin-right: auto;
+    margin-left: auto;
+    font-weight: 700;
+    font-size: 56px;
+    line-height: 1.1;
+    text-align: center;
+    letter-spacing: 0.02em;
+    color: var(--basic-white-color);
+  }
+  .modal-btn {
+    margin-top: 40px;
+  }
 }
-
-.hero-title {
-  max-width: 500px;
-  margin-right: auto;
-  margin-left: auto;
-  font-weight: 700;
-  font-size: 56px;
-  line-height: 1.1;
-  text-align: center;
-  letter-spacing: 0.02em;
-  color: var(--basic-white-color);
-}
-
 .benefits {
   padding-bottom: 0;
 }
@@ -1050,4 +1135,133 @@ img {
 .menu-portfolio .card-portfolio:hover .portfolio-card-content-wrapper,
 .menu-portfolio .card-portfolio:focus .portfolio-card-content-wrapper {
   border: 0.5px solid #f4f4fd;
+}
+
+@media screen and (max-width: 767px) {
+  .mobile-menu {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    z-index: 999;
+    top: 0;
+    left: 0;
+    background-color: var(--basic-white-color);
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
+    -webkit-transition: opacity var(--250ms-animation), visibility var(--250ms-animation), pointer-events var(--250ms-animation);
+    transition: opacity var(--250ms-animation), visibility var(--250ms-animation), pointer-events var(--250ms-animation);
+  }
+  .mobile-menu.is-open {
+    opacity: 1;
+    visibility: visible;
+    pointer-events: auto;
+  }
+  .mobile-menu-container {
+    position: relative;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    width: 100%;
+    height: 100%;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-flow: column;
+            flex-flow: column;
+    padding: 40px;
+  }
+  .mobile-menu-close-btn {
+    line-height: 0;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    width: 24px;
+    height: 24px;
+    position: absolute;
+    top: 24px;
+    right: 24px;
+    border-radius: 50%;
+    cursor: pointer;
+    background: #e7e9fc;
+    fill: #000000;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+  }
+  .mobile-menu-close-btn:hover,
+.mobile-menu-close-btn:focus {
+    background: var(--accent-color);
+    fill: #ffffff;
+  }
+  .mobile-menu-nav {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-flow: column;
+            flex-flow: column;
+    padding-top: 40px;
+    margin-bottom: auto;
+    gap: 40px;
+  }
+  .mobile-menu-item-link {
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.1;
+    letter-spacing: 0.02em;
+    color: var(--secondary-color);
+    -webkit-transition: color var(--250ms-animation);
+    transition: color var(--250ms-animation);
+  }
+  .mobile-menu-item-link:hover,
+.mobile-menu-item-link:focus {
+    color: var(--accent-color);
+  }
+  .mobile-menu-address {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-flow: column;
+            flex-flow: column;
+    gap: 40px;
+    margin-bottom: 48px;
+  }
+  .mobile-contact-link-phone {
+    font-weight: 600;
+    font-size: 36px;
+    line-height: 1.1;
+    color: var(--primary-brand);
+  }
+  .mobile-contact-link {
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+    color: var(--primary-color);
+  }
+  .mobile-social-list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
+    gap: 56px;
+  }
+  .mobile-social-list-icon {
+    width: 24px;
+    height: 24px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .mobile-menu {
+    display: none;
+  }
 }/*# sourceMappingURL=main.css.map */
