--- a/sass/components/_container.scss
+++ b/sass/components/_container.scss
@@ -1,8 +1,27 @@
-.container {
-   width: 1158px;
-   margin-right: auto;
-   margin-left: auto;
-   padding-left: 15px;
-   padding-right: 15px;
- }
+// .container {
+//    width: 1158px;
+//    margin-right: auto;
+//    margin-left: auto;
+//    padding-left: 15px;
+//    padding-right: 15px;
+//  }
  
+.container { 
+  max-width: 428px;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+@media screen and (min-width: 768px) {
+  .container { 
+    max-width: 768px; 
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .container { 
+    max-width: 1158px; 
+  }
+}
