--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -1,56 +1,118 @@
-.page-header {
-   padding-top: 24px;
-   padding-bottom: 24px;
-   border-bottom: 1px solid#E7E9FC;
- }
+
+//0px-767px// MOBILE
+@media screen and (max-width:767px) {
+  .menu { 
+    display: none;
+  }
+  
+  .main-address { 
+    display: none;
+  }
+
+  .mobile-menu-open { 
+    background-color: transparent;
+    border: none;
+    padding: 0;
+    line-height: 0;
+  }
+
+   .logo {
+   font-family: 'Raleway', sans-serif;
+   font-weight: 800;
+   font-size: 18px;
+   line-height: 1.33;
+   letter-spacing: 0.03em;
  
- .page-header-container {
-   display: flex;
-   align-items: center;
-   justify-content: space-between;
- }
- 
- .page-nav {
-   display: flex;
-   align-items: center;
- }
- 
- .menu {
-   display: flex;
-   align-items: center;
- }
- 
- .main-address {
-   display: flex;
-   align-items: center;
- }
- .address-menu {
-   display: flex;
-   align-items: center;
- }
- 
- .menu-item {
-   position: relative;
- }
- 
- .menu-item:not(:last-child) {
-   margin-right: 40px;
- }
- 
- .menu-link {
-   font-weight: 500;
-   line-height: 1.5;
-   letter-spacing: 0.02em;
    color: var(--secondary-color);
-   transition: color var(--250ms-animation);
- }
  
- .menu-link:hover,
- .menu-link:focus {
-   color: var(--accent-color);
+   margin-right: 76px;
  }
+}
+
+.page-header {
+  padding-top: 24px;
+  padding-bottom: 24px;
+}
+.page-header-container { 
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+//0px-1199px// TABLET
+@media screen and (min-width:768px) {
+
+  .mobile-menu-open{ 
+    display: none;
+  }
+  
+  .page-nav { 
+    display: flex;
+    text-align: center;
+  }
+
+  .logo {
+    font-family: 'Raleway', sans-serif;
+    font-weight: 800;
+    font-size: 18px;
+    line-height: 1.33;
+    letter-spacing: 0.03em;
+  
+    color: var(--secondary-color);
+  
+    margin-right: 120px;
+  }
  
- .current::after {
+
+  .menu { 
+    display: flex;
+    text-align: center;     
+  }
+   
+  .menu-item {
+    position: relative;
+  }
+  
+  .menu-item:not(:last-child) {
+    margin-right: 40px;
+  }
+  
+  .menu-link {
+    font-weight: 500;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: var(--secondary-color);
+    transition: color var(--250ms-animation);
+  }
+  
+  .menu-link:hover,
+  .menu-link:focus {
+    color: var(--accent-color);
+  }
+
+  .address-menu{ 
+    display: flex;
+    text-align: center;
+    flex-direction:column;
+    gap: 4px;
+  }
+
+  .contact-link {
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 1.33;
+    letter-spacing: 0.04em;
+    color: var(--primary-color);
+    transition: color var(--250ms-animation);
+  }
+  
+  .contact-link:hover,
+  .contact-link:focus {
+    color: var(--accent-color);
+  }
+
+   .current::after {
    position: absolute;
    left: 0;
    top: 45px;
@@ -68,9 +130,21 @@
  .current {
    color: var(--accent-color);
  }
- 
- .contact-link {
+}
+
+//0px-1200px// PC
+@media screen and (min-width:1200px) {
+
+  .page-header {
+    padding-top: 24px;
+    padding-bottom: 24px;
+    border-bottom: 1px solid#E7E9FC;
+  }
+  
+  .contact-link {
    font-style: normal;
+   font-weight: 400;
+   font-size: 16px;
    line-height: 1.5;
    letter-spacing: 0.02em;
    color: var(--primary-color);
@@ -81,9 +155,111 @@
  .contact-link:focus {
    color: var(--accent-color);
  }
+
+  .main-address{
+   display: flex;
+   align-items: center;
+ }
+
+ .address-menu {
+   display: flex;
+   align-items: center;
+   flex-direction: row;
+ }
  
- .mail {
+  .mail {
    margin-left: auto;
    margin-right: 40px;
  }
+
+}
+
+// .page-header {
+//    padding-top: 24px;
+//    padding-bottom: 24px;
+//    border-bottom: 1px solid#E7E9FC;
+//  }
+ 
+//  .page-header-container {
+//    display: flex;
+//    align-items: center;
+//    justify-content: space-between;
+//  }
+ 
+//  .page-nav {
+//    display: flex;
+//    align-items: center;
+//  }
+ 
+//  .menu {
+//    display: flex;
+//    align-items: center;
+//  }
+ 
+//  . main-address{
+//    display: flex;
+//    align-items: center;
+//  }
+//  .address-menu {
+//    display: flex;
+//    align-items: center;
+//  }
+ 
+//  .menu-item {
+//    position: relative;
+//  }
+ 
+//  .menu-item:not(:last-child) {
+//    margin-right: 40px;
+//  }
+ 
+//  .menu-link {
+//    font-weight: 500;
+//    line-height: 1.5;
+//    letter-spacing: 0.02em;
+//    color: var(--secondary-color);
+//    transition: color var(--250ms-animation);
+//  }
+ 
+//  .menu-link:hover,
+//  .menu-link:focus {
+//    color: var(--accent-color);
+//  }
+ 
+//  .current::after {
+//    position: absolute;
+//    left: 0;
+//    top: 45px;
+//    content: '';
+//    display: block;
+//    width: 100%;
+//    height: 4px;
+//    border-radius: 2px;
+//    background-color: var(--accent-color);
+//    transition: opacity var(--250ms-animation);
+ 
+//    opacity: 1;
+//  }
+ 
+//  .current {
+//    color: var(--accent-color);
+//  }
+ 
+//  .contact-link {
+//    font-style: normal;
+//    line-height: 1.5;
+//    letter-spacing: 0.02em;
+//    color: var(--primary-color);
+//    transition: color var(--250ms-animation);
+//  }
+ 
+//  .contact-link:hover,
+//  .contact-link:focus {
+//    color: var(--accent-color);
+//  }
+ 
+//  .mail {
+//    margin-left: auto;
+//    margin-right: 40px;
+//  }
  
