--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -6,6 +6,7 @@
     padding-bottom: 112px;
   }
 
+
    .hero-background {
    width: 100%;
    height: 432px;
@@ -43,7 +44,6 @@
 }
 
 
-
 //0px-1199px// TABLET
 @media screen and (min-width:768px) { 
 
@@ -53,14 +53,21 @@
     padding-bottom: 112px;
   }
 
-  .hero-background { 
+ 
+  .hero-background {
     height: 436px;
+    margin-right: auto;
+    margin-left: auto;
     background-image: linear-gradient(
-       to right,
-       rgba(46, 47, 66, 0.7),
-       rgba(46, 47, 66, 0.7)
-     ),
-     url('../images/people-office-hero-tab.jpg');
+        to right,
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)
+      ),
+      url('../images/people-office-hero-tab.jpg');
+  
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
   }
 
    .hero-title {
@@ -79,15 +86,49 @@
  .modal-btn { 
   margin-top: 40px;
  }
- 
-
-
 }
 
 
-
 //0px-1200px// PC
-// @media screen and (min-width:1200px)
+@media screen and (min-width:1200px) {
+
+.hero {
+   background-color: var(--secondary-color);
+   padding-top: 188px;
+   padding-bottom: 188px;
+ }
+
+  .hero-background {
+   max-width: 1440px;
+   height: 600px;
+   margin-right: auto;
+   margin-left: auto;
+   background-image: linear-gradient(
+       to right,
+       rgba(46, 47, 66, 0.7),
+       rgba(46, 47, 66, 0.7)
+     ),
+     url('../images/people-office-hero.jpg');
+ 
+   background-repeat: no-repeat;
+   background-position: center;
+   background-size: cover;
+ }
+
+  .hero-title {
+   max-width: 500px;
+   margin-right: auto;
+   margin-left: auto;
+   font-weight: 700;
+   font-size: 56px;
+   line-height: 1.1;
+   text-align: center;
+   letter-spacing: 0.02em;
+ 
+   color: var(--basic-white-color);
+ }
+ 
+}
 
 
 
