--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -17,7 +17,7 @@
        rgba(46, 47, 66, 0.7),
        rgba(46, 47, 66, 0.7)
      ),
-     url('../images/people-office-hero-mob.jpg');
+     url('../images/img-2x/hero-studio/bgi-mobile.jpg');
  
    background-repeat: no-repeat;
    background-position: center;
@@ -55,6 +55,7 @@
 
  
   .hero-background {
+    width: 100%;
     height: 436px;
     margin-right: auto;
     margin-left: auto;
@@ -63,7 +64,7 @@
         rgba(46, 47, 66, 0.7),
         rgba(46, 47, 66, 0.7)
       ),
-      url('../images/people-office-hero-tab.jpg');
+      url('../images/img-2x/hero-studio/bgi-tablet.jpg');
   
     background-repeat: no-repeat;
     background-position: center;
@@ -108,7 +109,7 @@
        rgba(46, 47, 66, 0.7),
        rgba(46, 47, 66, 0.7)
      ),
-     url('../images/people-office-hero.jpg');
+     url('../images/img-2x/hero-studio/bgi-desktop.jpg');
  
    background-repeat: no-repeat;
    background-position: center;
@@ -130,6 +131,47 @@
  
 }
 
+@media screen and (min-device-pixel-ratio: 2) and (max-width: 767px),
+(min-resolution: 192dpi) and (max-width: 767px),
+(min-resolution: 2dppx) and (max-width: 767px) {
+  .hero-background {
+    background-image: linear-gradient(
+      to right,
+      rgba(46, 47, 66, 0.7),
+      rgba(46, 47, 66, 0.7)
+    ),
+    url('../images/img-2x/hero-studio/bgi-mobile@2x.jpg');
+  }
+}
+
+
+  
+
+@media screen and (min-device-pixel-ratio: 2) and (min-width: 768px),
+(min-resolution: 192dpi) and (min-width: 768px),
+(min-resolution: 2dppx) and (min-width: 768px) {
+  .hero-background {
+    background-image: linear-gradient(
+      to right,
+      rgba(46, 47, 66, 0.7),
+      rgba(46, 47, 66, 0.7)
+    ),
+    url('../images/img-2x/hero-studio/bgi-tablet@2x.jpg');
+}
+}
+
+@media screen and (min-device-pixel-ratio: 2) and (min-width: 1200px),
+(min-resolution: 192dpi) and (min-width: 1200px),
+(min-resolution: 2dppx) and (min-width: 1200px) {
+  .hero-background {
+    background-image: linear-gradient(
+      to right,
+      rgba(46, 47, 66, 0.7),
+      rgba(46, 47, 66, 0.7)
+    ),
+    url('../images/img-2x/hero-studio/bgi-desktop@2x.jpg');
+}
+}
 
 
 
@@ -169,5 +211,3 @@
  
 //    color: var(--basic-white-color);
 //  }
- 
- 
