--- a/sass/components/_mobile-menu.scss
+++ b/sass/components/_mobile-menu.scss
@@ -1,3 +1,4 @@
+
 @media screen and (max-width:767px){
 
    .mobile-menu { 
@@ -95,6 +96,7 @@
       line-height: 1.1;
       
       color: var(--primary-brand)
+
     }
    
     .mobile-contact-link { 
@@ -122,4 +124,30 @@
    .mobile-menu{
       display: none;
    }    
+}
+
+
+
+
+.mobile-contact-link-phone { 
+  font-weight: 600;
+  font-size: 36px;
+  line-height: 1.1;
+  
+  color: var(--primary-brand);
+
+  @include mobile-320px {
+    font-size: 22px;
+  }
+}
+
+
+.mobile-social-list {
+  display: flex;
+  justify-content:flex-start;
+  gap: 56px;
+
+  @include mobile-320px {
+    gap: 28px;
+  }
 }
