--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -17,7 +17,7 @@
        rgba(46, 47, 66, 0.7),
        rgba(46, 47, 66, 0.7)
      ),
-     url('../images/img-2x/hero-studio/bgi-mobile.jpg');
+     url(../images/img-2x/hero-studio/bgi-mobile.jpg);
  
    background-repeat: no-repeat;
    background-position: center;
@@ -64,7 +64,7 @@
         rgba(46, 47, 66, 0.7),
         rgba(46, 47, 66, 0.7)
       ),
-      url('../images/img-2x/hero-studio/bgi-tablet.jpg');
+      url(../images/img-2x/hero-studio/bgi-tablet.jpg);
   
     background-repeat: no-repeat;
     background-position: center;
@@ -109,7 +109,7 @@
        rgba(46, 47, 66, 0.7),
        rgba(46, 47, 66, 0.7)
      ),
-     url('../images/img-2x/hero-studio/bgi-desktop.jpg');
+     url(../images/img-2x/hero-studio/bgi-desktop.jpg);
  
    background-repeat: no-repeat;
    background-position: center;
@@ -140,7 +140,7 @@
       rgba(46, 47, 66, 0.7),
       rgba(46, 47, 66, 0.7)
     ),
-    url('../images/img-2x/hero-studio/bgi-mobile@2x.jpg');
+    url(../images/img-2x/hero-studio/bgi-mobile@2x.jpg);
   }
 }
 
@@ -156,7 +156,7 @@
       rgba(46, 47, 66, 0.7),
       rgba(46, 47, 66, 0.7)
     ),
-    url('../images/img-2x/hero-studio/bgi-tablet@2x.jpg');
+    url(../images/img-2x/hero-studio/bgi-tablet@2x.jpg);
 }
 }
 
@@ -169,7 +169,7 @@
       rgba(46, 47, 66, 0.7),
       rgba(46, 47, 66, 0.7)
     ),
-    url('../images/img-2x/hero-studio/bgi-desktop@2x.jpg');
+    url(../images/img-2x/hero-studio/bgi-desktop@2x.jpg);
 }
 }
 
